sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (j <- debut to fin) {
  ^AlgSelectionSort:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return result
  ^